# uaxidma

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: cicd.yml
include/: axi_dma.h  register_flags.h  sg_descriptor.h  uaxidma.h  udmabuf.h  uio.h
src/: axi_dma.cpp  meson.build  sg_descriptor.cpp  uaxidma.cpp  udmabuf.cpp  uio.cpp
test/: async_tx_demo.cpp  cyclic_rx_demo.cpp  meson.build
